{
  "version": 4,
  "terraform_version": "1.13.4",
  "serial": 33,
  "lineage": "b82458cd-0328-f182-509d-dc07c5b8b3d6",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "epam-tf-practice",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:779846811265:internet-gateway/igw-0b2fdd04baa7514b6",
            "id": "igw-0b2fdd04baa7514b6",
            "owner_id": "779846811265",
            "tags": {
              "Name": "cmtr-9upx8vyr-01-igw"
            },
            "tags_all": {
              "Name": "cmtr-9upx8vyr-01-igw"
            },
            "vpc_id": "vpc-0f2cb424d64a733b6"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.epam-tf-practice"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "internet_access",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0b2fdd04baa7514b6",
            "id": "r-rtb-07bad2920a275d1721080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-07bad2920a275d172",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.epam-tf-practice",
            "aws_route_table.epam-tf-practice",
            "aws_vpc.epam-tf-practice"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "epam-tf-practice",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:779846811265:route-table/rtb-07bad2920a275d172",
            "id": "rtb-07bad2920a275d172",
            "owner_id": "779846811265",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "cmtr-9upx8vyr-01-rt"
            },
            "tags_all": {
              "Name": "cmtr-9upx8vyr-01-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f2cb424d64a733b6"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.epam-tf-practice"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "cmtr-9upx8vyr-01-subnet-public-a",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0932ff4ba01370536",
            "route_table_id": "rtb-07bad2920a275d172",
            "subnet_id": "subnet-08f566712a9bdb636"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route_table.epam-tf-practice",
            "aws_subnet.epam-tf-practice",
            "aws_vpc.epam-tf-practice"
          ]
        },
        {
          "index_key": "cmtr-9upx8vyr-01-subnet-public-b",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0271ee09c877c0734",
            "route_table_id": "rtb-07bad2920a275d172",
            "subnet_id": "subnet-05f7f53d18f11906e"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route_table.epam-tf-practice",
            "aws_subnet.epam-tf-practice",
            "aws_vpc.epam-tf-practice"
          ]
        },
        {
          "index_key": "cmtr-9upx8vyr-01-subnet-public-c",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0fb38a4c90423bf4c",
            "route_table_id": "rtb-07bad2920a275d172",
            "subnet_id": "subnet-035f5ff31a8ca56d5"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route_table.epam-tf-practice",
            "aws_subnet.epam-tf-practice",
            "aws_vpc.epam-tf-practice"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "epam-tf-practice",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "cmtr-9upx8vyr-01-subnet-public-a",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:779846811265:subnet/subnet-08f566712a9bdb636",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.10.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08f566712a9bdb636",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "779846811265",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "cmtr-9upx8vyr-01-subnet-public-a"
            },
            "tags_all": {
              "Name": "cmtr-9upx8vyr-01-subnet-public-a"
            },
            "vpc_id": "vpc-0f2cb424d64a733b6"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.epam-tf-practice"
          ]
        },
        {
          "index_key": "cmtr-9upx8vyr-01-subnet-public-b",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:779846811265:subnet/subnet-05f7f53d18f11906e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.10.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05f7f53d18f11906e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "779846811265",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "cmtr-9upx8vyr-01-subnet-public-b"
            },
            "tags_all": {
              "Name": "cmtr-9upx8vyr-01-subnet-public-b"
            },
            "vpc_id": "vpc-0f2cb424d64a733b6"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.epam-tf-practice"
          ]
        },
        {
          "index_key": "cmtr-9upx8vyr-01-subnet-public-c",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:779846811265:subnet/subnet-035f5ff31a8ca56d5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.10.5.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-035f5ff31a8ca56d5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "779846811265",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "cmtr-9upx8vyr-01-subnet-public-c"
            },
            "tags_all": {
              "Name": "cmtr-9upx8vyr-01-subnet-public-c"
            },
            "vpc_id": "vpc-0f2cb424d64a733b6"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.epam-tf-practice"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "epam-tf-practice",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:779846811265:vpc/vpc-0f2cb424d64a733b6",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.10.0.0/16",
            "default_network_acl_id": "acl-0dc121da02345f3bc",
            "default_route_table_id": "rtb-0ad7699774bc9b31c",
            "default_security_group_id": "sg-0c3a32821171555da",
            "dhcp_options_id": "dopt-00f19f4143fac8f70",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0f2cb424d64a733b6",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0ad7699774bc9b31c",
            "owner_id": "779846811265",
            "tags": {
              "Name": "cmtr-9upx8vyr-01-vpc"
            },
            "tags_all": {
              "Name": "cmtr-9upx8vyr-01-vpc"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}